--- a/MovieStore/Views/Customers/Index.cshtml
+++ b/MovieStore/Views/Customers/Index.cshtml
@@ -18,6 +18,7 @@ else
         <thead>
             <tr>
                 <th>Customer</th>
+                <th>Membership Type</th>
                 <th>Discount Rate</th>
             </tr>
         </thead>
@@ -26,6 +27,7 @@ else
             {
                 <tr>
                     <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id}, null)</td>
+                    <td>@customer.MembershipType.MembershipName</td>
                     <td>@customer.MembershipType.DiscountRate%</td>
                 </tr>
             }
