--- a/MovieStore/Views/Customers/Details.cshtml
+++ b/MovieStore/Views/Customers/Details.cshtml
@@ -6,3 +6,11 @@
 
 <h2>@Model.Name</h2>
 
+<ul>
+    <li>@Model.MembershipType.MembershipName</li>
+    @if (Model.BirthDate.HasValue)
+    {
+        <li>@Model.BirthDate</li>
+    }
+</ul>
+
