--- a/MovieStore/Views/Movies/Index.cshtml
+++ b/MovieStore/Views/Movies/Index.cshtml
@@ -11,13 +11,19 @@
     <thead>
         <tr>
             <th>Movie</th>
+            <th>Genre</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@movie.Name</td>
+                <td>
+                    @Html.ActionLink(movie.Name, "Details",new { id=movie.Id})
+                </td>
+                <td>
+                    @movie.Genre.Name
+                </td>
             </tr>
         }
     </tbody>
