--- a/MovieStore/Views/Customers/New.cshtml
+++ b/MovieStore/Views/Customers/New.cshtml
@@ -42,6 +42,7 @@ else
     </div>
 
     @Html.HiddenFor(m => m.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
