--- a/MovieStore/Views/Customers/Index.cshtml
+++ b/MovieStore/Views/Customers/Index.cshtml
@@ -45,7 +45,7 @@ else
 {
     <script>
         $(document).ready(function () {
-            $("#customers .js-delete").on("click", function () {
+            $("#customers").on("click", ".js-delete", function () {
                 var button = $(this);
 
                 bootbox.confirm("are you sure?", function (result) {
