--- a/MovieStore/Views/Customers/Index.cshtml
+++ b/MovieStore/Views/Customers/Index.cshtml
@@ -15,7 +15,6 @@
         <tr>
             <th>Customer</th>
             <th>Membership Type</th>
-            <th>Discount Rate</th>
             <th>Delete</th>
         </tr>
     </thead>
@@ -40,7 +39,7 @@
                         }
                     },
                     {
-                        data: "name"
+                        data: "membershipType.membershipName"
                     },
                     {
                         data: "id",
